--- a/src/main/resources/application-akka.conf
+++ b/src/main/resources/application-akka.conf
@@ -15,12 +15,13 @@ akka {
   extensions = [akka.persistence.Persistence]
   persistence {
     journal {
-      leveldb.dir = "target/journal"
+      leveldb.dir = "target/shared-journal"
       plugin = "akka.persistence.journal.leveldb"
       auto-start-journals = ["akka.persistence.journal.leveldb"]
     }
 
     snapshot-store {
+      local.dir = "target/shared-snapshots"
       plugin = "akka.persistence.snapshot-store.local"
       auto-start-snapshot-stores = ["akka.persistence.snapshot-store.local"]
     }
