--- a/src/main/resources/application-pekko.conf
+++ b/src/main/resources/application-pekko.conf
@@ -16,12 +16,13 @@ pekko {
   extensions = [org.apache.pekko.persistence.Persistence]
   persistence {
     journal {
-      leveldb.dir = "target/journal"
+      leveldb.dir = "target/shared-journal"
       plugin = "pekko.persistence.journal.leveldb"
       auto-start-journals = ["pekko.persistence.journal.leveldb"]
     }
 
     snapshot-store {
+      local.dir = "target/shared-snapshots"
       plugin = "pekko.persistence.snapshot-store.local"
       auto-start-snapshot-stores = ["pekko.persistence.snapshot-store.local"]
     }
